--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- google 搜尋 -->
-    <meta name="description" content="意傳科技，用科技推廣台灣母語。開發台灣母語資訊軟體，台語語音合成TTS，台語語音辨識STT技術，影音字幕自動化處理，而且提供客製化語料庫服務">
-    <meta name="keywords" content="台語,臺語,台灣母語,語音合成,語音辨識,語料庫,閩南語,河洛話,斷詞,台羅,白話字,臺羅,POJ,全羅,漢羅,台語文,台文" />
-    <meta name="author" content="意傳科技">
-    <meta name="copyright" content="意傳科技">
-    <!-- google+ -->
-    <meta itemprop="name" content="意傳科技">
-    <meta itemprop="image" content="/android-chrome-512x512.png">
-    <meta itemprop="description" content="意傳科技，用科技推廣台灣母語。開發台灣母語資訊軟體，台語語音合成TTS，台語語音辨識STT技術，影音字幕自動化處理，而且提供客製化語料庫服務">
-    <!-- og:面冊 -->
-    <meta property="fb:app_id" content="1396239530638874"/>
-    <meta property="og:title" content="意傳科技" >
-    <meta property="og:url" content="網址">
-    <meta property="og:image" content="/android-chrome-512x512.png">
-    <meta property="og:description" content="意傳科技，用科技推廣台灣母語。開發台灣母語資訊軟體，台語語音合成TTS，台語語音辨識STT技術，影音字幕自動化處理，而且提供客製化語料庫服務" >
-
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="/manifest.json">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="theme-color" content="#ffffff">
+    <meta http-equiv="refresh" content="0; url=https://ithuan.tw/" />
+    <link rel="canonical" href="https://ithuan.tw" />
     <title>意傳科技</title>
   </head>
   <body>
